Added crud for stores table. Added the swagger api docs for this as well.
